# things.encoding

./: .gitignore  README.md  hello_tribe.py  main.py  one_stimuli.py  pyproject.toml  setup.py  test_single_stimulus.py  tribe_demo.ipynb
src/: Config.py  HDF5Writer.py  RidgeRegression.py  TransformerHooks.py  TribeHDF5Normalization.py  VFRtoCFRConverter.py  VideoSegmenteur.py  main.py  main_embeddings_friends.py  minimal_test.py
test/: minimal_test.py  ourvrir_hdf5.py  test_get_frame.py
