[project]
name = "things-encoding"
version = "0.1.0"
description = "Extraction de représentations latentes TRIBE v2 sur les vidéos THINGS"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
    "exca>=0.5.20,<0.5.24",
    "torch>=2.6.0,<2.7",
    "torchvision>=0.20,<0.22",
    "numpy==2.2.6",
    "h5py>=3.11.0",
    "opencv-python>=4.9.0",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.23.0",
    "ipykernel>=7.2.0",
    "neuralfetch-cneuromod @ git+https://github.com/courtois-neuromod/neuralfetch-cneuromod.git",
    "transformers>=4.40.0,<5.0.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.2.1",
    "torchcodec==0.1.0",
    "torchaudio>=2.11.0",
    "scipy>=1.17.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/things_encoding"]
